--- a/values.yaml
+++ b/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  repository: pantsel/konga
-  tag: latest
+  repository: cyble/konga
+  tag: 753c5a08-181-2624
   pullPolicy: IfNotPresent
 
 nameOverride: ""
@@ -29,6 +29,7 @@ config: {}
 #   db_host: localhost
 #   db_port: 5432
 #   db_user:
+#   db_migrations_enabled: false
 #   db_password:
 #   db_database: konga_database
 #   db_pg_schema: public
