--- a/values.yaml
+++ b/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: pantsel/konga
-  tag: next
+  tag: latest
   pullPolicy: IfNotPresent
 
 nameOverride: ""
@@ -29,7 +29,6 @@ config: {}
 #   db_host: localhost
 #   db_port: 5432
 #   db_user:
-#   db_migrations_enabled: false
 #   db_password:
 #   db_database: konga_database
 #   db_pg_schema: public
